+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.5.2c1?
=============================

*Release date: XX-XXX-XXXX*

Core and builtins
-----------------

- A few crashers fixed: weakref_in_del.py (issue #1377858);
  loosing_dict_ref.py (issue #1303614, test67.py);
  borrowed_ref_[34].py (not in tracker).

- Fix for #1303614 and #1174712 backported from the trunk:
  __dict__ descriptor abuse for subclasses of built-in types;
  subclassing from both ModuleType and another built-in types.

- Bug #1915: Python compiles with --enable-unicode=no again. However
  several extension methods and modules do not work without unicode
  support.

- Issue #1678380: distinction between 0.0 and -0.0 was lost during constant
  folding optimization.  This was a regression from Python 2.4.

- Issue #1882: when compiling code from a string, encoding cookies in the
  second line of code were not always recognized correctly.

- Bug #1517: Possible segfault in lookup().

- Issue #1638: %zd configure test fails on Linux.

- Issue #1553: An erroneous __length_hint__ can make list() raise a
  SystemError.

- Issue #1521: On 64bit platforms, using PyArgs_ParseTuple with the t# of w#
  format code incorrectly truncated the length to an int, even when
  PY_SSIZE_T_CLEAN is set.  The str.decode method used to return incorrect
  results with huge strings.

- Issue #1445: Fix a SystemError when accessing the ``cell_contents`` 
  attribute of an empty cell object.

- Issue #1265: Fix a problem with sys.settrace, if the tracing function uses a
  generator expression when at the same time the executed code is closing a
  paused generator.

- Issue 1704621: Fix segfaults in list_repeat() and list_inplace_repeat().

- Issue #1147: Generators were not raising a DeprecationWarning when a string
  was passed into throw().

- Patch #1031213: Decode source line in SyntaxErrors back to its original source
  encoding.
